--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,19 @@
 <body>
     
       <header>
-           <nav class="navbar" role="navigation" aria-label="Main Navigation" >
-            <h1 class="task_master">Task Master</h1>  
-            <ul class="navbar__list">
-                <li class="navbar__item"><a class="navbar__link" href="{{ url_for('index') }}">Home</a></li>
-                <li class="navbar__item"><a class="navbar__link" href="{{ url_for('register') }}">Register</a></li>
-                <li class="navbar__item"><a class="navbar__link" href="{{ url_for('login') }}">Login</a></li>
-              </ul>
-           </nav>
+        <nav class="navbar" role="navigation" aria-label="Main Navigation">
+          <h1 class="task_master">Task Master</h1>  
+          <div class="hamburger" onclick="toggleMenu()">
+              <div class="bar"></div>
+              <div class="bar"></div>
+              <div class="bar"></div>
+          </div>
+          <ul class="navbar__list" id="navbar__list">
+              <li class="navbar__item"><a class="navbar__link" href="{{ url_for('index') }}">Home</a></li>
+              <li class="navbar__item"><a class="navbar__link" href="{{ url_for('register') }}">Register</a></li>
+              <li class="navbar__item"><a class="navbar__link" href="{{ url_for('login') }}">Login</a></li>
+          </ul>
+      </nav>       
       </header>
       
     <div class="container">
@@ -33,8 +38,10 @@
       </div>
 
       <div class="get__started">
-        <a class="start__button" href="{{ url_for('register') }}">Get Started</a>
+        <a class="liquid_shape" href="{{ url_for('register') }}">Get Started</a>
       </div>
     </div>
+
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body> 
 </html>
