--- a/templates/register.html
+++ b/templates/register.html
@@ -12,16 +12,21 @@
 </head>
 <body>
      
-    <header>
-        <nav class="navbar" role="navigation" aria-label="Main Navigation" >
-          <h1 class="task_master">Task Master</h1>
-          <ul class="navbar__list">
-             <li class="navbar__item"><a class="navbar__link" href="{{ url_for('index') }}">Home</a></li>
-             <li class="navbar__item"><a class="navbar__link" href="{{ url_for('register') }}">Register</a></li>
-             <li class="navbar__item"><a class="navbar__link" href="{{ url_for('login') }}">Login</a></li>
-           </ul>
-        </nav>
-   </header>     
+  <header>
+    <nav class="navbar" role="navigation" aria-label="Main Navigation">
+      <h1 class="task_master">Task Master</h1>  
+      <div class="hamburger" onclick="toggleMenu()">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+      </div>
+      <ul class="navbar__list" id="navbar__list">
+          <li class="navbar__item"><a class="navbar__link" href="{{ url_for('index') }}">Home</a></li>
+          <li class="navbar__item"><a class="navbar__link" href="{{ url_for('register') }}">Register</a></li>
+          <li class="navbar__item"><a class="navbar__link" href="{{ url_for('login') }}">Login</a></li>
+      </ul>
+  </nav>       
+  </header>
 
 
      <!-- Flash Messages -->
