--- a/templates/register.html
+++ b/templates/register.html
@@ -31,7 +31,7 @@
 
      <!-- Flash Messages -->
      {% with messages = get_flashed_messages() %}
-     {% if messages %}
+     {% if messages %}  
        <div class="flash-container">
          {% for message in messages %}
            <div class="flash">{{ message }}</div>
@@ -70,5 +70,6 @@
     </form>
 </div>
 
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
