--- a/templates/login.html
+++ b/templates/login.html
@@ -62,6 +62,6 @@
     </form>
 </div>
 
-<script src="{{url_for('static', filename='js/scripts.js')}}"></script>
+<script src="{{url_for('static', filename='js/script.js')}}"></script> 
 </body>
 </html>
